<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@drawable/patines2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/patin"
        android:contentDescription="@string/iconoPatin"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="150dp"
        />

    <View
        android:id="@+id/borderView"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:background="#FBEEF3"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="135dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:shape="rectangle"/>

    <EditText
        android:id="@+id/usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="205dp"
        android:backgroundTint="#FF0000"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#E91E63"
        android:text="@string/aceptar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="450dp"
        android:layout_marginBottom="90dp"
        android:layout_marginStart="145dp"/>

    <View
        android:id="@+id/borderView2"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:background="#FBEEF3"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="76dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:shape="rectangle"/>

    <EditText
        android:id="@+id/nombreCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="260dp"
        android:backgroundTint="#FF0000"
        android:hint="@string/nombreCompleto"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/borderView3"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:background="#FBEEF3"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:shape="rectangle"/>

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="315dp"
        android:backgroundTint="#FF0000"
        android:hint="@string/contrasenia"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/borderView4"
        android:layout_width="220dp"
        android:layout_height="43dp"
        android:background="#FBEEF3"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:shape="rectangle"/>

    <EditText
        android:id="@+id/direccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="370dp"
        android:hint="@string/direccionEnvio"
        android:backgroundTint="#FF0000"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

</FrameLayout>