<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/patines"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/patin"
        android:contentDescription="@string/iconoPatin"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="150dp"
    />

    <View
        android:id="@+id/borderView"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#FBEEF3"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="center"
        android:shape="rectangle"/>

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:text="@string/nombre"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#E91E63"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="center"/>

    <View
        android:id="@+id/borderdescripcion"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="#FFE3EC"
        android:layout_marginTop="93dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="center"
        android:shape="rectangle"/>

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginTop="93dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/descripcion"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#E91E63"
        android:text="@string/boton1"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        />



</FrameLayout>